fix gap

--- a/styles/navbar.scss
+++ b/styles/navbar.scss
@@ -58,7 +58,7 @@
     .corner {
       display: flex;
       align-items: center;
-      gap: 24px;
+      gap: 17px;
 
       & > * {
         display: flex;
